Bug 397606, don't deactivate menubar when switching menus, r+sr=bz, a=damon